fix cast being hidden under div

--- a/html/css/stylesheet.css
+++ b/html/css/stylesheet.css
@@ -135,10 +135,6 @@ input[type=button]:hover {
 	height: 50px;
 }
 
-#cast {
-	height: 75px;
-}
-
 .item{
 	width: 100%;
 }
